upgrade to spring boot 4.2